fixed navbar z-index

--- a/src/style.scss
+++ b/src/style.scss
@@ -42,6 +42,7 @@ body {
 .navbar {    
     background-color: $white !important;
     padding: 0 8.875rem;
+    z-index: 10;
     
     .navbar-brand {
         font-size: 2.1875rem;
